# contrib-plugins

./: README.md
spring-opendal/: Cargo.toml
spring-utoipa/: Cargo.toml
spring-utoipa/examples/simple/: main.rs
spring-utoipa/examples/with-rapidoc/: main.rs
spring-utoipa/examples/with-redoc/: main.rs
spring-utoipa/examples/with-scalar/: main.rs
spring-utoipa/examples/with-swagger-ui/: main.rs
spring-utoipa/src/: config.rs  lib.rs
