[package]
name = "spring-utoipa"
description = "Basic Utoipa plugin for spring-rs"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["NikSne"]
categories = ["web-programming"]
keywords = ["openapi", "spring"]
homepage = "https://spring-rs.github.io/"
repository = "https://github.com/spring-rs/contrib-plugins/"

[features]
default = ["preserve_order", "preserve_path_order"]

debug = ["utoipa/debug"]
chrono = ["utoipa/chrono"]
decimal = ["utoipa/decimal"]
decimal_float = ["utoipa/decimal_float"]
non_strict_integers = ["utoipa/non_strict_integers"]
yaml = ["utoipa/yaml"]
uuid = ["utoipa/uuid"]
ulid = ["utoipa/ulid"]
url = ["utoipa/url"]
time = ["utoipa/time"]
smallvec = ["utoipa/smallvec"]
indexmap = ["utoipa/indexmap"]
openapi_extensions = []
repr = ["utoipa/repr"]
preserve_order = []
preserve_path_order = []
rc_schema = ["utoipa/rc_schema"]
config = ["utoipa/config"]

# EXPERIEMENTAL! use with caution
auto_into_responses = ["utoipa/auto_into_responses"]

# OpenAPI visualizers
rapidoc = ["utoipa-rapidoc"]
redoc = ["utoipa-redoc"]
scalar = ["utoipa-scalar"]
swagger-ui = ["utoipa-swagger-ui"]

[dependencies]
spring = "0.4"
spring-web = "0.4"

serde = "1.0"

utoipa = { version = "5.3", features = ["axum_extras"] }
utoipauto = "0.2"

# OpenAPI visualizers
utoipa-rapidoc = { version = "6.0", optional = true, features = ["axum"] }
utoipa-redoc = { version = "6.0", optional = true, features = ["axum"] }
utoipa-scalar = { version = "0.3", optional = true, features = ["axum"] }
utoipa-swagger-ui = { version = "9.0", optional = true, features = ["axum", "vendored"] }

[dev-dependencies]
spring = "0.4"
spring-web = "0.4"
tokio = { version = "1", features = ["full", "tracing"] }

[[example]]
name = "simple"

[[example]]
name = "with-rapidoc"
required-features = ["rapidoc"]

[[example]]
name = "with-redoc"
required-features = ["redoc"]

[[example]]
name = "with-scalar"
required-features = ["scalar"]

[[example]]
name = "with-swagger-ui"
required-features = ["swagger-ui"]

